# CUSMART

./: CMakeLists.txt  README.md
samples/: dna.txt  input.txt  lipsum.txt
scripts/: build.bat  build.sh  cmake-setup.sh  dupefile.py  generate_dna.py  test.bat  test.sh
src/: exactmatch.c  exactmatch.h  main.c
src/algos/: ac.cu  ac.cuh  ag.cu  ag.cuh  aoso2.cu  aoso2.cuh  bf.cu  bf.cuh  bfb.cu  bfb.cuh  bfbs.cu  bfbs.cuh  bfs.cu  bfs.cuh  blim.cu  blim.cuh  bm.cu  bm.cuh  bmh_sbndm.cu  bmh_sbndm.cuh  bndm.cu  bndm.cuh  bndmq2.cu  bndmq2.cuh  bndmq4.cu  bndmq4.cuh  bom.cu  bom.cuh  br.cu  br.cuh  bsdm.cu  bsdm.cuh  bww.cu  bww.cuh  bxs.cu  bxs.cuh  col.cu  col.cuh  dfa.cu  dfa.cuh  (+116 more)
src/algos/include/: define.cuh
src/srlalgos/: ac.c  ac.h  ag.c  ag.h  akc.c  akc.h  algorithm_list.h  aoso2.c  aoso2.h  bf.c  bf.h  bfs.c  bfs.h  blim.c  blim.h  bm.c  bm.h  bmh_sbndm.c  bmh_sbndm.h  bndm.c  bndm.h  bndml.c  bndml.h  bndmq2.c  bndmq2.h  bndmq4.c  bndmq4.h  bom.c  bom.h  br.c  br.h  bsdm.c  bsdm.h  bww.c  bww.h  bxs.c  bxs.h  col.c  col.h  dfa.c  (+115 more)
src/srlalgos/include/: AUTOMATON.h  define.h  log2.h
src/util/: cutil.cuh  device.cu  device.h  parameters.h  reduction.cu  reduction.cuh
src/wrappers/: ac_wrapper.cu  ac_wrapper.h  ag_wrapper.cu  ag_wrapper.h  aoso2_wrapper.cu  aoso2_wrapper.h  bf_wrapper.cu  bf_wrapper.h  bfb_wrapper.cu  bfb_wrapper.h  bfbs_wrapper.cu  bfbs_wrapper.h  bfs_wrapper.cu  bfs_wrapper.h  bfst_wrapper.cu  bfst_wrapper.h  blim_wrapper.cu  blim_wrapper.h  bm_wrapper.cu  bm_wrapper.h  bmh_sbndm_wrapper.cu  bmh_sbndm_wrapper.h  bndm_wrapper.cu  bndm_wrapper.h  bndmq2_wrapper.cu  bndmq2_wrapper.h  bndmq4_wrapper.cu  bndmq4_wrapper.h  bom_wrapper.cu  bom_wrapper.h  br_wrapper.cu  br_wrapper.h  bsdm_wrapper.cu  bsdm_wrapper.h  bww_wrapper.cu  bww_wrapper.h  bxs_wrapper.cu  bxs_wrapper.h  col_wrapper.cu  col_wrapper.h  (+121 more)
